3.06000 2009-09-16
    - support for multipart/from-data posts, used by update_profile_image and
      update_profile_background_image
    - bumped version requirement on namespace::autoclean to avoid deprecation notice

3.05003 2009-09-10
    - URI 1.35 breaks unicode support; require 1.40 (thanks to Dan Boger, @zigdon)
    - Removed deprecated is_authorized from examples in pod (thanks to Nigel Metheringham)

3.05002 2009-08-27
    - Work around perl bug requiring encoded hash keys when client uses "use utf8"

3.05001 2009-08-21
    - Added get_authentication_url for "Sign in with Twitter" authentication flow
    - Updated "source" option documentation (closes RT 48786)

3.05000  2009-08-14
    - Added new API methods: home_timeline, retweet, retweed_{by,of,to}_me
    - Removed JSON::DWIW from supported handlers (lacks support for JSON::Any's uft8 option)

3.04006  2009-07-29
    - Silence Net::OAuth double encoding error (false positives)
    - Fixed: infrequent OAuth signature failures

3.04005  2009-07-28
    - Fix: OAuth / unicode conflict

3.04004  2009-07-28
    - Bug fix: OAuth signatures on POST requests (Galen Huntington)

3.04003  2009-07-23
    - properly utf-8 encode output to twitter (should provide full unicode support, now)

3.04002  2009-07-21
    - Optionally decode HTML entities in status text

3.04001  2009-07-17
    - Set JSON::Any option utf8 for consistent unicode support
    - Added ssl and netrc options (from Net::Twitter::Lite)

3.04000 2009-07-07
    - Added inflation of Twitter return HASH refs to Moose objects

3.03003 2009-07-07
    - Fixed a typo in Makefile.PL

3.03002 2009-07-04
    - Updated documentation to include callback parameter to get_authorization_url
    - Different OAuth nonce algorithm avoids duplicates in forked processes
    - Bumped JSON version dependencies for better JSON boolean handling

3.03001 2009-06-29
    - Updated to Moose 0.85
    - Properly subclassed top level Net::Twitter modules

3.03000 2009-06-25